; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/dvb-usb/extr_ttusb2.c_tt3650_ci_uninit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/dvb-usb/extr_ttusb2.c_tt3650_ci_uninit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_usb_device = type { %struct.ttusb2_state* }
%struct.ttusb2_state = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dvb_usb_device*)* @tt3650_ci_uninit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tt3650_ci_uninit(%struct.dvb_usb_device* %0) #0 {
  %2 = alloca %struct.dvb_usb_device*, align 8
  %3 = alloca %struct.ttusb2_state*, align 8
  store %struct.dvb_usb_device* %0, %struct.dvb_usb_device** %2, align 8
  %4 = call i32 @ci_dbg(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  %5 = load %struct.dvb_usb_device*, %struct.dvb_usb_device** %2, align 8
  %6 = icmp eq %struct.dvb_usb_device* null, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %29

8:                                                ; preds = %1
  %9 = load %struct.dvb_usb_device*, %struct.dvb_usb_device** %2, align 8
  %10 = getelementptr inbounds %struct.dvb_usb_device, %struct.dvb_usb_device* %9, i32 0, i32 0
  %11 = load %struct.ttusb2_state*, %struct.ttusb2_state** %10, align 8
  store %struct.ttusb2_state* %11, %struct.ttusb2_state** %3, align 8
  %12 = load %struct.ttusb2_state*, %struct.ttusb2_state** %3, align 8
  %13 = icmp eq %struct.ttusb2_state* null, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %8
  br label %29

15:                                               ; preds = %8
  %16 = load %struct.ttusb2_state*, %struct.ttusb2_state** %3, align 8
  %17 = getelementptr inbounds %struct.ttusb2_state, %struct.ttusb2_state* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = icmp eq i32* null, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %15
  br label %29

22:                                               ; preds = %15
  %23 = load %struct.ttusb2_state*, %struct.ttusb2_state** %3, align 8
  %24 = getelementptr inbounds %struct.ttusb2_state, %struct.ttusb2_state* %23, i32 0, i32 0
  %25 = call i32 @dvb_ca_en50221_release(%struct.TYPE_3__* %24)
  %26 = load %struct.ttusb2_state*, %struct.ttusb2_state** %3, align 8
  %27 = getelementptr inbounds %struct.ttusb2_state, %struct.ttusb2_state* %26, i32 0, i32 0
  %28 = call i32 @memset(%struct.TYPE_3__* %27, i32 0, i32 8)
  br label %29

29:                                               ; preds = %22, %21, %14, %7
  ret void
}

declare dso_local i32 @ci_dbg(i8*) #1

declare dso_local i32 @dvb_ca_en50221_release(%struct.TYPE_3__*) #1

declare dso_local i32 @memset(%struct.TYPE_3__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
